runs/runs/github.com/hitesh-1997/CS231n_assign/logs/test-notebook-assignment1-Untitled1.ipynb-2020-07-13T09.27.txt
[I 200713 09:28:13 inrepo:36] Testing notebook assignment1/Untitled1.ipynb
[I 200713 09:28:13 inrepo:45] Found kernel python3
[I 200713 09:28:14 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 114, in <module>
    main()
  File "/src/inrepo.py", line 110, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 75, in run_notebook
    nb, cwd=os.path.dirname(nb_path), kernel_name=kernel_name, timeout=600
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
import numpy as np 
from math import e
from math import log

mat = np.array([[0,1,2],[1,-3,3],[3,6,1],[-5,6,-4]])
print(mat)

results = {}
best_val = -1
best_net = None
best_params = ()
learning_rates = [4e-4,6e-4,8e-4,1e-3,2e-3]
reg_strengths = [0.3,0.6,0.7,0.9]

hidden_size=75

for i in learning_rates:
    for j in  reg_strengths:
        
------------------

[0;36m  File [0;32m"<ipython-input-1-35931f030411>"[0;36m, line [0;32m19[0m
[0;31m    [0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m unexpected EOF while parsing

SyntaxError: unexpected EOF while parsing (<ipython-input-1-35931f030411>, line 19)


Container exited with status: {'Error': None, 'StatusCode': 1}
